# VBUProjectsAgent

./: README.md  VBU-Projects-Agent-Implementation-Plan.md  setup.ps1  setup.sh
vbu-projects-agent/: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_RECORD.md  README.md  pyproject.toml
vbu-projects-agent/.claude/: settings.json
vbu-projects-agent/.claude/commands/: onboard-project.md  portfolio-dashboard.md  project-status.md  sync-ado.md  update-project.md
vbu-projects-agent/config/: vbu-agent.yaml
vbu-projects-agent/projects/_example/: project.yaml
vbu-projects-agent/projects/_example/context/: conflicts.md  current_status.md  decisions.md  delivery_notes.md  dependencies.md  financials.md  milestones.md  overview.md  risks.md  team.md
vbu-projects-agent/projects/elekta-clarion/: project.yaml
vbu-projects-agent/projects/elekta-clarion/context/: conflicts.md  current_status.md  decisions.md  delivery_notes.md  dependencies.md  financials.md  milestones.md  overview.md  risks.md  team.md
vbu-projects-agent/src/vbu_projects_agent/: __init__.py  cli.py  env.py  orchestrator.py
vbu-projects-agent/src/vbu_projects_agent/ado/: __init__.py  cache.py  client.py  errors.py  wiql.py  work_items.py
vbu-projects-agent/src/vbu_projects_agent/agents/: __init__.py  ado_metrics.py  context_curator.py  status_analyst.py
vbu-projects-agent/src/vbu_projects_agent/claude/: __init__.py  api_key_provider.py  local_cli_provider.py  provider.py  routing.py
vbu-projects-agent/templates/: executive_dashboard.html.j2  project_status_report.html.j2
(+51 files in other folders)
