[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vbu-projects-agent"
version = "0.1.0"
description = "VBU Delivery Manager agentic solution for project context, metrics, and executive reporting"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.28",
    "httpx>=0.27",
    "jinja2>=3.1",
    "plotly>=5.22",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "zoneinfo; python_version<'3.9'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "freezegun>=1.5",
    "pytest-cov>=5.0",
]

[project.scripts]
vbu-agent = "vbu_projects_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["src/vbu_projects_agent/tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["vbu_projects_agent"]
omit = ["*/tests/*"]
